--- a/Unity/Controller/Controller.csproj
+++ b/Unity/Controller/Controller.csproj
@@ -72,6 +72,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Factory\" />
     <Folder Include="Helper\" />
     <Folder Include="Logic\" />
   </ItemGroup>
