--- a/Unity/Unity.CSharp.csproj
+++ b/Unity/Unity.CSharp.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -107,7 +107,6 @@
     <Compile Include="Assets\Scripts\Base\Network\TNet\TPoller.cs" />
     <Compile Include="Assets\Scripts\Base\Network\TNet\TService.cs" />
     <Compile Include="Assets\Scripts\Base\Network\TNet\TSocket.cs" />
-    <Compile Include="Assets\Scripts\Base\Network\TimerManager.cs" />
     <Compile Include="Assets\Scripts\Base\Network\UNet\Library.cs" />
     <Compile Include="Assets\Scripts\Base\Network\UNet\NativeMethods.cs" />
     <Compile Include="Assets\Scripts\Base\Network\UNet\NativeStructs.cs" />
