1.整理了服务端网络代码 2.加入了NLog支持 3.加入ENet库

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ _ReSharper.CSharp/
 /Unity/Assets/Res/Code/Controller.dll.mdb.bytes.meta
 /Unity/CSharp60Support/compilation log.txt
 /CSharp/CSharp.VC.opendb
+/Server/Server.VC.opendb
