--- a/Unity/Controller/Unity.Controller.csproj
+++ b/Unity/Controller/Unity.Controller.csproj
@@ -54,7 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Event\InitSceneStartEvent_InitGame.cs" />
-    <Compile Include="Message\S2C_InitBuffInfoEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +70,7 @@
     <Folder Include="Factory\" />
     <Folder Include="Helper\" />
     <Folder Include="Logic\" />
+    <Folder Include="Message\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
