--- a/Server/Base/Server.Base.csproj
+++ b/Server/Base/Server.Base.csproj
@@ -131,6 +131,9 @@
     <Compile Include="..\..\Unity\Assets\Plugins\Base\Message\MessageAttribute.cs">
       <Link>Message\MessageAttribute.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Plugins\Base\Message\OpcodeAttribute.cs">
+      <Link>Message\OpcodeAttribute.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Plugins\Base\Message\RpcException.cs">
       <Link>Message\RpcException.cs</Link>
     </Compile>
