--- a/Server/Controller/Server.Controller.csproj
+++ b/Server/Controller/Server.Controller.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="C2S_SubscribeLogEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="C2S_LoginEvent.cs" />
   </ItemGroup>
