--- a/Unity/Controller/Unity.Controller.csproj
+++ b/Unity/Controller/Unity.Controller.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Event\InitSceneStartEvent_InitGame.cs" />
+    <Compile Include="Message\S2C_ServerLogEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,7 +71,6 @@
     <Folder Include="Factory\" />
     <Folder Include="Helper\" />
     <Folder Include="Logic\" />
-    <Folder Include="Message\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
