--- a/Unity/Controller/Unity.Controller.csproj
+++ b/Unity/Controller/Unity.Controller.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Event\InitSceneStartEvent_InitGame.cs" />
-    <Compile Include="Message\S2C_ServerLogEvent.cs" />
+    <Compile Include="Message\S2C_ServerLogHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
