更新了服务端日志配置

--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -2,12 +2,19 @@
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<targets>
-		<target name="file" xsi:type="File"
-			fileName="${basedir}/Log.txt"
+		<target name="debug" xsi:type="File"
+			fileName="${basedir}/Log.Debug.txt"
 			deleteOldFileOnStartup="true"
 			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${message}" />
 	</targets>
+	<targets>
+		<target name="error" xsi:type="File"
+			fileName="${basedir}/Log.Error.txt"
+			deleteOldFileOnStartup="false"
+			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${message}" />
+	</targets>
 	<rules>
-		<logger name="*" minlevel="Debug" writeTo="file" />
+		<logger name="*" minlevel="Debug" writeTo="debug" />
+		<logger name="*" minlevel="Error" writeTo="error" />
 	</rules>
 </nlog>
