Client连接Realm(验证服务器), Realm随机分配一个Gate，并且向Gate请求一个Key，发回给Client, client拿着key连接Gate 调试通过！

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -74,10 +74,15 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Message\OpcodeHelper.cs">
       <Link>Message\OpcodeHelper.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Other\CommandLine.cs">
+      <Link>Other\CommandLine.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Other\Options.cs">
       <Link>Other\Options.cs</Link>
     </Compile>
     <Compile Include="Component\LogToClientComponent.cs" />
+    <Compile Include="Component\GateSessionKeyComponent.cs" />
+    <Compile Include="Component\RealmGateAddressComponent.cs" />
     <Compile Include="Component\OptionsComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
