--- a/Server/Controller/Server.Controller.csproj
+++ b/Server/Controller/Server.Controller.csproj
@@ -34,9 +34,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="C2S_SubscribeLogHandler.cs" />
+    <Compile Include="Message\C2G_LoginGateHandler.cs" />
+    <Compile Include="Message\R2G_GetLoginKeyHandler.cs" />
+    <Compile Include="Message\C2R_SubscribeLogHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="C2S_LoginHandler.cs" />
+    <Compile Include="Message\C2R_LoginHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base\Server.Base.csproj">
