增加管理App类型，所有进程由管理App管理，启动，停止，Reload等等

--- a/Server/Base/Server.Base.csproj
+++ b/Server/Base/Server.Base.csproj
@@ -104,6 +104,9 @@
     <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MongoHelper.cs">
       <Link>Helper\MongoHelper.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\NetHelper.cs">
+      <Link>Helper\NetHelper.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\ProtobufHelper.cs">
       <Link>Helper\ProtobufHelper.cs</Link>
     </Compile>
