1.Realm Gate等服务器进程需要连接外网，所以需要监听两个端口，一个UDP对外，一个TCP对内 2.配置文件使用组件模式 3.Bson需要对继承的类进行注册，添加了BsonClassMapRegister类，在运行程序前注册

--- a/Server/App/Server.App.csproj
+++ b/Server/App/Server.App.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MongoDB.Bson, Version=2.3.0.157, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\MongoDB.Bson.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -57,6 +61,11 @@
       <Project>{820d3488-76b9-4ee8-872a-be06c2350b20}</Project>
       <Name>Server.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Start.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
