修复Entity和Component释放bug，增加打印泄露功能

--- a/Unity/Unity.CSharp.Editor.csproj
+++ b/Unity/Unity.CSharp.Editor.csproj
@@ -111,6 +111,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Editor\EditorInit.cs" />
+    <Compile Include="Assets\Editor\ObjectManagerToolsEditor\ObjectManagerToolsWindow.cs" />
     <Compile Include="Assets\Editor\ReferenceCollectorEditor\ReferenceCollectorEditor.cs" />
     <Compile Include="Assets\Editor\ServerCommandLineEditor\UI\ServerCommandLineEditor.cs" />
   </ItemGroup>
