1.unity增加同步到Linux功能 2.服务器增加Start脚本

--- a/Tools/cwRsync/rsyncd.conf
+++ b/Tools/cwRsync/rsyncd.conf
@@ -3,9 +3,12 @@ gid = root
 #strict modes = no
 use chroot = no
 max connections = 100
-
-[Source]
-path = /home/tanghai/Source/
+read only = no
+write only = no
+log file=/var/log/rsyncd.log
+# Remote sync configuration module
+[Tanghai]
+path = /home/tanghai/
 auth users = tanghai
 secrets file = /etc/rsyncd.secrets
 list = yes
